[metadata]
name = vt-kvd
#version = attr: %(name)s.version.__version__
version = attr: vt_kvd.version.__version__
author = retif
description = A VirusTotal GUI client
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virustotal, gui
url = https://github.com/retifrav/vt-kvd
project_urls =
    Bug Tracker = https://github.com/retifrav/vt-kvd/issues
    Changelog = https://github.com/retifrav/vt-kvd/blob/master/changelog.md
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Desktop Environment
    Topic :: Software Development :: User Interfaces
    Topic :: Security

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    dearpygui
    pandas
    python-magic
    vt-py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vt-kvd = vt_kvd.__main__:main

[mypy]
ignore_missing_imports = true
